fix(blog): improve list item spacing and add border for better separation

--- a/src/app/pages/blog/blog.page.scss
+++ b/src/app/pages/blog/blog.page.scss
@@ -78,11 +78,17 @@
   &__list {
     border-bottom: 1px solid var(--color-border);
     flex: 1;
+    margin: 0 -1.5rem;
+    padding: 0 1.5rem;
+
+    @media (min-width: 768px) {
+      margin: 0 -2.5rem;
+      padding: 0 2.5rem;
+    }
   }
 
   &__item {
     align-items: baseline;
-    border-top: 1px solid var(--color-border);
     cursor: pointer;
     display: grid;
     gap: 1.5rem;
@@ -90,6 +96,10 @@
     padding: 1.75rem 0;
     position: relative;
     transition: color 0.3s;
+
+    &:not(:first-child) {
+      border-top: 1px solid var(--color-border);
+    }
 
     @media (min-width: 640px) {
       gap: 2rem;
